added converting birthdate to age

--- a/WSR_Airlines/AdminMenuWindow.xaml
+++ b/WSR_Airlines/AdminMenuWindow.xaml
@@ -40,6 +40,7 @@
                         </DataTrigger>
                         <DataTrigger Binding="{Binding Active}" Value="0">
                             <Setter Property="Background" Value="Red" />
+                            <Setter Property="BorderBrush" Value="Red"/>
                         </DataTrigger>
                     </Style.Triggers>
                 </Style>
