--- a/WSR_Airlines/AdminMenuWindow.xaml
+++ b/WSR_Airlines/AdminMenuWindow.xaml
@@ -30,10 +30,10 @@
             <MenuItem Header="Exit" Height="25" Width="59" Click="MenuItemExit_Click"/>
             
         </Menu>
+        <Label HorizontalAlignment="Left" Height="40" Content="Office: " Grid.Column="0" Grid.Row="1" > </Label>
+        <ComboBox x:Name="officeCB" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" Width="350" Height="40" FontSize="32" SelectionChanged="officeCB_SelectionChanged"> </ComboBox>
 
-        <ComboBox x:Name="officeCB" Grid.Column="0" Grid.Row="1" FontSize="32" SelectionChanged="officeCB_SelectionChanged"> </ComboBox>
-
-        <DataGrid x:Name="UserDataGrid" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3">
+        <DataGrid x:Name="UserDataGrid" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3" Margin="10">
             <DataGrid.CellStyle>
                 <Style TargetType="{x:Type DataGridCell}">
                     <Style.Triggers>
@@ -44,13 +44,17 @@
                             <Setter Property="Background" Value="Red" />
                             <Setter Property="BorderBrush" Value="Red"/>
                         </DataTrigger>
+                        <DataTrigger Binding="{Binding Role}" Value ="1">
+                            <Setter Property="Background" Value="LightGreen"/>
+                            <Setter Property="BorderBrush" Value="LightGreen"/>
+                        </DataTrigger>
                     </Style.Triggers>
                 </Style>
             </DataGrid.CellStyle>
 
-           
-
         </DataGrid>
+        <Button x:Name="changeRoleBTN" Content="Change Role"  FontSize="20"  Grid.Row="5" Grid.Column="0" BorderThickness="2" HorizontalAlignment="Left" Margin="10" Click="changeRoleBTN_Click"  />
+        <Button x:Name="changeLoginBTN" Content="Enable/Disable Login" HorizontalAlignment="Right"  FontSize="20"  Grid.Row="5" Grid.Column="0" BorderThickness="2"  Margin="10" Click="changeLoginBTN_Click"  />
 
     </Grid>
 </Window>
