added role update for user

--- a/WSR_Airlines/AdminAddUserWindow.xaml
+++ b/WSR_Airlines/AdminAddUserWindow.xaml
@@ -50,7 +50,7 @@
         <TextBox x:Name="passwordTB"  FontSize="15"  BorderBrush="Black" BorderThickness="2" Grid.Column="2" Grid.Row="11"/>
 
         <Button x:Name="saveBTN" Content="Save"  FontSize="14"  Grid.Row="12" Grid.Column="1" BorderThickness="2"  VerticalAlignment="Bottom" Click="saveBTN_Click" />
-        <Button x:Name="cancelBTN" Content="Cancel"  FontSize="14"  Grid.Row="12" Grid.Column="2" BorderThickness="2" Margin="20,0,0,0" VerticalAlignment="Bottom" />
+        <Button x:Name="cancelBTN" Content="Cancel"  FontSize="14"  Grid.Row="12" Grid.Column="2" BorderThickness="2" Margin="20,0,0,0" VerticalAlignment="Bottom" Click="cancelBTN_Click" />
        
     </Grid>
 </Window>
