--- a/WSR_Airlines/AdminMenuWindow.xaml
+++ b/WSR_Airlines/AdminMenuWindow.xaml
@@ -33,7 +33,7 @@
         <Label HorizontalAlignment="Left" Height="40" Content="Office: " Grid.Column="0" Grid.Row="1" > </Label>
         <ComboBox x:Name="officeCB" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" Width="350" Height="40" FontSize="32" SelectionChanged="officeCB_SelectionChanged"> </ComboBox>
 
-        <DataGrid x:Name="UserDataGrid" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3" Margin="10">
+        <DataGrid x:Name="UserDataGrid" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3" Margin="10" SelectedCellsChanged="UserDataGrid_SelectedCellsChanged">
             <DataGrid.CellStyle>
                 <Style TargetType="{x:Type DataGridCell}">
                     <Style.Triggers>
